src/objects/Product_Component__c.object
<CustomObject>
    <fields>
        <fullName>Component_Number__c</fullName>
        <formula>Related_Product__r.SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Components</relationshipLabel>
        <relationshipName>Product_BOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Components (Component)</relationshipLabel>
        <relationshipName>Product_Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Component</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Component-{0000}</displayFormat>
        <label>Product component #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Components</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Same_product_issue</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Product__c ==  Related_Product__c , true, false)</errorConditionFormula>
        <errorDisplayField>Related_Product__c</errorDisplayField>
        <errorMessage>You cannot select the same product</errorMessage>
    </validationRules>
</CustomObject>